--- a/zero.ipynb
+++ b/zero.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4b699ed67524bf6b48d569dae8799ae",
+       "model_id": "208ed64fe5e0425e8da6844bcca03a70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
        "<function __main__.display_task_by_index(index)>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,21 +43,25 @@
     "def get_mime_type(path):\n",
     "    \"\"\"\n",
     "    Determine the MIME type based on the file extension in the path.\n",
+    "    If the path is None or the extension is unknown, default to 'image/png'.\n",
     "    \n",
     "    Args:\n",
-    "        path (str): The file path or identifier of the image.\n",
+    "        path (str or None): The file path or identifier of the image.\n",
     "    \n",
     "    Returns:\n",
     "        str: The corresponding MIME type (e.g., 'image/png').\n",
     "    \"\"\"\n",
-    "    if path.lower().endswith('.png'):\n",
+    "    if path is None:\n",
+    "        return 'image/png'  # Default to PNG if path is None\n",
+    "    path = path.lower()\n",
+    "    if path.endswith('.png'):\n",
     "        return 'image/png'\n",
-    "    elif path.lower().endswith('.jpg') or path.lower().endswith('.jpeg'):\n",
+    "    elif path.endswith('.jpg') or path.endswith('.jpeg'):\n",
     "        return 'image/jpeg'\n",
-    "    elif path.lower().endswith('.gif'):\n",
+    "    elif path.endswith('.gif'):\n",
     "        return 'image/gif'\n",
     "    else:\n",
-    "        return 'image/png'  # Default to PNG if unknown\n",
+    "        return 'image/png'  # Default to PNG if extension is unknown\n",
     "\n",
     "def display_task(row):\n",
     "    \"\"\"\n",
